[tool.poetry]
authors = ["Hannes Krumbiegel"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
description = "Stresses Russian texts and ebooks using ML grammar analysis and Wiktionary data"
keywords = ["russian", "stress", "wiktionary", "ebook"]
license = "GPLv3"
name = "russian-text-stresser"
readme = "README.md"
repository = "https://github.com/Vuizur/add-stress-to-epub"
version = "0.1.1"

[tool.poetry.dependencies]
PyQt6 = {version = "^6.3.1", optional = true}
beautifulsoup4 = "^4.11.1"
ebook-dictionary-creator = {git = "https://github.com/Vuizur/ebook_dictionary_creator", optional = true}
lxml = "^4.9.1"
mwxml = {version = "^0.3.3", optional = true}
openai = ">=0.24.0"
pymorphy2 = "^0.9.1"
python = "^3.8,<3.11"
ruwiktionary-htmldump-parser = {git = "https://github.com/Vuizur/ruwiktionary-htmldump-parser", optional = true}
spacy = "3.4.0"
stressed-cyrillic-tools = "^0.1.10"
russtress = {version = "^0.1.4", optional = true}
transliterate = "^1.10.2"
russian-stress-benchmark = {git = "https://github.com/Vuizur/russian-stress-benchmark", optional = true}
russ = {version = "^0.0.2", optional = true}
#numpy = "1.23.5" # russtress cannot handle newer versions, but if you uncomment this it breaks everything thanks to poetry
msgpack = {version = "^1.0.4", optional = true}
filelock = {version = "^3.9.0", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pyinstaller = "^5.3"

[tool.poetry.extras]
GUI = ["PyQt6"]
database-creation = ["ebook-dictionary-creator", "ruwiktionary-htmldump-parser", "mwxml"]
benchmark = ["russtress", "russian-stress-benchmark"]
#https://github.com/python-poetry/poetry/issues/3957
poetry-workaround = ["msgpack", "filelock"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
