[tool.poetry]
authors = ["Hannes Krumbiegel"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]
description = "Stresses Russian texts and ebooks using ML grammar analysis and Wiktionary data"
keywords = ["russian", "stress", "wiktionary", "ebook"]
license = "GPLv3"
name = "russian-text-stresser"
readme = "README.md"
repository = "https://github.com/Vuizur/add-stress-to-epub"
version = "0.1.1"

[tool.poetry.dependencies]
PyQt6 = {version = "^6.3.1", optional = true}
beautifulsoup4 = ">=4.11.1"
ebook-dictionary-creator = {git = "https://github.com/Vuizur/ebook_dictionary_creator", optional = true}
lxml = ">=4.9.1"
mwxml = {version = ">=0.3.3", optional = true}
openai = {version = ">=0.24.0", optional = true}
pymorphy2 = ">=0.9.1"
python = "^3.9, <3.12"
ruwiktionary-htmldump-parser = {git = "https://github.com/Vuizur/ruwiktionary-htmldump-parser", optional = true}
spacy = "3.6.*"
stressed-cyrillic-tools = ">=0.1.10"
russtress = {version = ">=0.1.4", optional = true}
transliterate = ">=1.10.2"
russian-stress-benchmark = {git = "https://github.com/Vuizur/russian-stress-benchmark", optional = true}
russ = {version = ">=0.0.2", optional = true}
#numpy = "1.23.5" # russtress cannot handle newer versions, but if you uncomment this it breaks everything thanks to poetry
pymorphy2-dicts-ru = ">=2.4.417127.4579844"
tensorflow-io-gcs-filesystem = {version = "0.31.0", optional = true} # Another thing that needs to be locked when using poetry, awesome :/
transformers = {version = ">=4.29.0", optional = true}
llama-cpp-python = ">=0.1.52"
seaborn = {version = ">=0.12.2", optional = true}
litestar = {extras = ["cli", "standard"], version = "^2.0.0rc1"}
stressrnn = {git = "https://github.com/Vuizur/StressRNN", optional = true}
tensorflow = {version = ">=2.10.0", optional = true}
pandas = {version = ">=2.0.3", optional = true}
pandas-stubs = {version = ">=2.0.2.230605", optional = true}

[tool.poetry.dev-dependencies]
black = ">=22.6.0"
mypy = ">=0.971"
pyinstaller = ">=5.3"
pytest = ">=7.4.0"

[tool.poetry.extras]
GUI = ["PyQt6"]
database-creation = ["ebook-dictionary-creator", "ruwiktionary-htmldump-parser", "mwxml"]
benchmark = ["russtress", "russian-stress-benchmark", "russ", "tensorflow-io-gcs-filesystem", "seaborn", "pandas", "pandas-stubs"]
word_sense_disambiguation = ["llama-cpp-python", "transformers", "openai"]
server = ["litestar"]
stressrnn = ["stressrnn", "tensorflow"] # For some reason poetry downloads an older tensorflow

[tool.pyright]
reportUnknownMemberType = false # With pandas this check is too strict

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]