[metadata]
name = russian-text-stresser
version = 0.6.0
author = Hannes Krumbiegel
#author_email = author@example.com
description = Stresses Russian texts and ebooks using ML grammar analysis and Wiktionary data
long_description = file: README.md
long_description_content_type = text/markdown
keywords = russian, stress, ebook
url = https://github.com/Vuizur/add-stress-to-epub
project_urls =
    Bug Tracker = https://github.com/Vuizur/add-stress-to-epub/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires = 
    spacy==3.1.3
    beautifulsoup4
    pymorphy2

[options.package_data]
russian_text_stresser/ru_core_news_sm-3.1.0 = *
russian_text_stresser = russian_dict.db

[options.extras_require]
GUI = PyQt6
